<resources>
    <string name="app_name">CC-Retrofit-GameSuit</string>
    <string name="txt_login">Login</string>
    <string name="text_register">Register</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="password_default">binar123</string>
    <string name="username_default">sabrina</string>
    <string name="text_daftarkan_akunmu">Daftarkan Akunmu</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_daftar">Daftar</string>
    <string name="text_sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="text_click_here">Click Here</string>
    <string name="version_app">V.2.0.0</string>
    <string name="splashimage">SplashImage</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="text_splash_satu">Bermain Suit melawan sesama pemain</string>
    <string name="text_splash_dua">Bermain Suit melawan komputer</string>
    <string name="text_splash_tiga">Persiapkan dirimu!</string>
    <string name="start">GOT IT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>